# tree-sitter-highlight

./: .gitignore  Cargo.toml  README.md  bench.js  build.rs  index.d.ts  index.js  package.json  style.css  test.html  test.js  theme.js  theme.json
.cargo/: config.toml
.github/workflows/: tag-release.yml
example/: .parcelrc  components.tsx  index.tsx  package.json  react.tsx  style.css
src/: highlight_names.rs  lib.rs
