[package]
name = "node-tree-sitter-highlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
napi = "2"
napi-derive = "2"
lazy_static = "1.4"
tree-sitter-highlight = "0.24.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-css = "0.23.1"
tree-sitter-regex = "0.24.3"
tree-sitter-yaml = "0.7.0"
tree-sitter-html = "0.23.2"

[build-dependencies]
napi-build = { version = "1" }
tree-sitter = "0.24.6"
tree-sitter-highlight = "0.24.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-css = "0.23.1"
tree-sitter-regex = "0.24.3"
tree-sitter-yaml = "0.7.0"
tree-sitter-html = "0.23.2"

[profile.release]
opt-level = 3
lto = true
